[workspace]
members = ["src/*", "examples/src/*"]
exclude = ["examples/src/http_server_body_validation"]
resolver = "2"

[workspace.dependencies]
candid = "0.10.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_bytes = "0.11.12"
serde-aux = "*"
validator = "*"
mime = "*"
matchit = "0.7.3"
serde_json = "1.0.108"
dyn-clone = "1.0.16"


ic-cdk = "0.13"
ructe = { version = "0.17.0", features = ["mime03"] }


