[package]
name = "pluto"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
matchit = { workspace = true }
serde_json = { workspace = true }
dyn-clone = { workspace = true }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }
ic-cdk = "0.13.1"