[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
candid = { workspace = true }
serde_json = { workspace = true }
serde = "1.0"

once_cell = "1.8.0"
pluto = { path = "../../../src/pluto" }
